--- a/css/header/style.css
+++ b/css/header/style.css
@@ -4,6 +4,7 @@ header {
   align-items: center;
   flex-direction: column;
   background-color: #f5f3f4;
+  width: 100%;
   height: 515px;
   position: relative;
 }
@@ -14,6 +15,7 @@ header {
   width: 100%;
   height: 100%;
   display: flex;
+  overflow: hidden;
 }
 .h_background .h_b_l {
   width: 100%;
@@ -216,7 +218,6 @@ header {
 }
 .h_main {
   z-index: 2;
-  width: 1366px;
   height: 100%;
   color: #3e3e3e;
   display: flex;
