--- a/css/carrossel01/style.css
+++ b/css/carrossel01/style.css
@@ -23,7 +23,6 @@
 }
 .slider .s-carrocel div .s_img {
   display: flex;
-  object-fit: contain;
   width: 421px;
   height: 200px;
   margin: 0px 10px 0px 0px;
@@ -33,6 +32,7 @@
   width: 100%;
   height: 100%;
   cursor: pointer;
+  object-fit: cover;
   transition: all 0.3s;
 }
 .slider .s-carrocel div .s_img img:hover {
@@ -102,12 +102,12 @@
 }
 @media screen and (max-width: 960px) {
   .slider {
-    padding: 40px 30px 30px 30px;
+    padding: 5px 30px 5px 30px;
   }
 }
 @media screen and (max-width: 760px) {
   .slider {
-    padding: 40px 0px 50px 0px;
+    padding: 5px 0px 30px 0px;
   }
   .slider .s-carrocel {
     display: flex;
