--- a/sass/carrossel01/style.scss
+++ b/sass/carrossel01/style.scss
@@ -16,7 +16,6 @@
 
             .s_img {
                 display: flex;
-                object-fit: contain;
                 width: 421px;
                 height: 200px;
                 margin: 0px 10px 0px 0px;
@@ -26,6 +25,7 @@
                     width: 100%;
                     height: 100%;
                     cursor: pointer;
+                    object-fit: cover;
                     transition: all 0.3s;
 
                     &:hover {
@@ -109,13 +109,13 @@
 
 @media screen and (max-width: 960px) {
     .slider {
-        padding: 40px 30px 30px 30px;
+        padding: 5px 30px 5px 30px;
     }
 }
 
 @media screen and (max-width: 760px) {
     .slider {
-        padding: 40px 0px 50px 0px;
+        padding: 5px 0px 30px 0px;
 
         .s-carrocel {
             @include flex-padrao(flex, center);
