--- a/sass/header/_div_menu_2.scss
+++ b/sass/header/_div_menu_2.scss
@@ -30,7 +30,7 @@
         a {
             padding: 20px 0px;
             text-decoration: none;
-            color: $cor-gry-strong;
+            color: $cor-gray-strong;
             font-size: 1rem;
 
             &:hover {
