--- a/sass/header/_h_nav.scss
+++ b/sass/header/_h_nav.scss
@@ -31,7 +31,7 @@
         a {
             padding: 15px 0px;
             text-decoration: none;
-            color: $cor-gry-strong;
+            color: $cor-gray-strong;
             font-size: 1rem;
 
             &:hover {
