--- a/sass/body/main.scss
+++ b/sass/body/main.scss
@@ -1,7 +1,6 @@
 @import '../variaveis/variaveis';
 
 * {
-    // padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
@@ -13,6 +12,9 @@ html {
 body {
     font-family: Helvetica, sans-serif;
     @include flex-padrao(flex, flex-start, center, column);
-    // overflow-x: hidden;
     height: 100%;
+
+    &::-webkit-scrollbar{
+        width: 0px;
+    }
 }
